tests/snapshots/test_variables__at_rule_font_palette_values.snap
---
source: tests/test_variables.rs
expression: stylesheet
---
rules:
  - type: font-palette-values
    value:
      name: "--identifier"
      properties:
        - type: font-family
          value: Bixa
      loc:
        source_index: 0
        line: 2
        column: 1
      variables:
        - name: b
          value:
            - type: token
              value:
                type: number
                value: 123
variables:
  - name: a
    value:
      - type: token
        value:
          type: number
          value: 123
sources:
  - ""
sourceMapUrls:
  - ~
licenseComments: []

