tests/snapshots/test_variables__at_rule_page.snap
---
source: tests/test_variables.rs
expression: stylesheet
---
rules:
  - type: page
    value:
      selectors: []
      declarations:
        importantDeclarations: []
        declarations: []
        variables: []
      rules: []
      loc:
        source_index: 0
        line: 2
        column: 1
      variables:
        - name: b
          value:
            - type: token
              value:
                type: number
                value: 123
  - type: page
    value:
      selectors: []
      declarations:
        importantDeclarations: []
        declarations: []
        variables: []
      rules:
        - marginBox: top-right
          declarations:
            importantDeclarations: []
            declarations: []
            variables:
              - name: d
                value:
                  - type: token
                    value:
                      type: number
                      value: 123
          loc:
            source_index: 0
            line: 7
            column: 3
      loc:
        source_index: 0
        line: 5
        column: 1
      variables:
        - name: c
          value:
            - type: token
              value:
                type: number
                value: 123
variables:
  - name: a
    value:
      - type: token
        value:
          type: number
          value: 123
sources:
  - ""
sourceMapUrls:
  - ~
licenseComments: []

