tests/snapshots/test_variables__at_rule_starting_style.snap
---
source: tests/test_variables.rs
expression: stylesheet
---
rules:
  - type: starting-style
    value:
      rules:
        - type: style
          value:
            selectors:
              - - type: attribute
                  namespace: ~
                  name: popover
                  operation: ~
                - type: pseudo-class
                  kind: popover-open
            declarations:
              importantDeclarations: []
              declarations:
                - property: opacity
                  value: 0
                - property: transform
                  vendorPrefix: []
                  value:
                    - type: scaleX
                      value:
                        type: number
                        value: 0
              variables: []
            rules: []
            loc:
              source_index: 0
              line: 4
              column: 3
            variables:
              - name: c
                value:
                  - type: token
                    value:
                      type: number
                      value: 123
      loc:
        source_index: 0
        line: 2
        column: 1
      variables:
        - name: b
          value:
            - type: token
              value:
                type: number
                value: 123
variables:
  - name: a
    value:
      - type: token
        value:
          type: number
          value: 123
sources:
  - ""
sourceMapUrls:
  - ~
licenseComments: []

